--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     testCompile 'junit:junit:4.12'
+    compile 'org.litepal.android:core:1.3.2'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
