--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@
 buildscript {
     repositories {
         jcenter()
+        google()
+        mavenCentral()
+        maven{url 'https://maven.google.com'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0'
@@ -15,6 +18,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
+        maven{url 'https://maven.google.com'}
     }
 }
 
